--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div id="stdout"></div>
+	<div id="stdout">
+		<p>Welcome to MinGW</p>
+		<p>A GNU Emulator for JS created by <span class="info" onclick="window.open('https://github.com/tumble1999')" style="cursor:pointer;">tumble1999</span> and <span class="info" onclick="window.open('https://github.com/alvarito050506')" style="cursor:pointer;">alvarito050506</span></p>
+		<br>
+		<p>Source Code: <span class="info" onclick="window.open('https://github.com/tumble1999/mingj')" style="cursor:pointer;">https://github.com/tumble1999/mingj</span></p>
+		<p>UserScript: <span class="info" onclick="window.open('https://github.com/tumble1999/mingj/raw/master/dist/min-gj.user.js')" style="cursor:pointer;">https://github.com/tumble1999/mingj/raw/master/dist/min-gj.user.js</span></p>
+		<br>
+		<p>Type '<span class="info" onclick="Bash('help')" style="cursor:pointer;">help</span>' for a list of commands.</p>
+	</div>
 	<script src="https://cdn.jsdelivr.net/gh/tumble1999/mingj@master/dist/min-gj.min.js"></script>
 	<script src="webprompt.js"></script>
 	<script src="index.js"></script>
