--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div id="stdout">
-		<p>Welcome to MinGW</p>
+		<p>Welcome to MinGW 0.1</p>
 		<p>A GNU Emulator for JS created by <span class="info" onclick="window.open('https://github.com/tumble1999')" style="cursor:pointer;">tumble1999</span> and <span class="info" onclick="window.open('https://github.com/alvarito050506')" style="cursor:pointer;">alvarito050506</span></p>
 		<br>
 		<p>Source Code: <span class="info" onclick="window.open('https://github.com/tumble1999/mingj')" style="cursor:pointer;">https://github.com/tumble1999/mingj</span></p>
@@ -17,7 +17,7 @@
 		<br>
 		<p>Type '<span class="info" onclick="Bash('help')" style="cursor:pointer;">help</span>' for a list of commands.</p>
 	</div>
-	<script src="https://cdn.jsdelivr.net/gh/tumble1999/mingj@master/dist/min-gj.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/gh/tumble1999/mingj@latest/dist/min-gj.min.js"></script>
 	<script src="webprompt.js"></script>
 	<script src="index.js"></script>
 </span>
