--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<br>
 		<p>Type '<span class="info" onclick="Bash('help')" style="cursor:pointer;">help</span>' for a list of commands.</p>
 	</div>
-	<script src="https://cdn.jsdelivr.net/gh/tumble1999/mingj@latest/dist/min-gj.min.js"></script>
+	<script src="https://rawcdn.githack.com/tumble1999/mingj/9c589d46100a9f0070699733b38fb6ce534512d7/dist/min-gj.min.js"></script>
 	<script src="webprompt.js"></script>
 	<script src="index.js"></script>
 </span>
